# Freezer

./: .gitmodules  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.cpp
src/model/: CMakeLists.txt  Model.cpp  Model.h  Model_callbacks.h  Model_types.h
src/model/freezer/: Freezer.cpp  Freezer.h  Item.cpp  Item.h
src/model/observer/: CMakeLists.txt  Subject.cpp  Subject.h
src/observer/: CMakeLists.txt  observer.cpp  observer.h  subject.cpp  subject.h
src/presenter/: MainPresenter.cpp  MainPresenter.h
src/view/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
tests/src/: CMakeLists.txt
tests/src/model/freezer/: Freezer_test.cpp
